tests/fail/no code block.rs
concat_idents::concat_idents!(fn_name = no_code     
    /* there must be a code block */
);

fn main() {}
