tests/fail/no code block.stderr
error: unexpected end of input, expected curly braces
 --> $DIR/no code block.rs:1:1
  |
1 | / concat_idents::concat_idents!(fn_name = no_code
2 | |     /* there must be a code block */
3 | | );
  | |__^
  |
  = note: this error originates in the macro `concat_idents::concat_idents` (in Nightly builds, run with -Z macro-backtrace for more info)
